# wordle-solver

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  wordle_solver.ipynb
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
tests/: test_data.py  test_session.py  test_streamlit_app.py
wordle_solver/: __init__.py  __main__.py  cli.py  data.py  session.py  streamlit_app.py
